--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -21,11 +21,18 @@ body[a="dark"] { @include dark-appearance; }
 // see: https://stackoverflow.com/a/61265706
 html, body { background: white; }
 
+
+@font-face {
+  font-family: duospace;
+  src: url(https://github.com/iaolo/iA-Fonts/blob/ba31f88a1e71f413f97bbd23a99e21b29d4c3a28/iA%20Writer%20Duospace/Webfonts/iAWriterDuospace-Bold.woff);
+}
+
+
 html { height: 100%; }
 
 body {
   color: black;
-  font-family: monospace;
+  font-family: duospace;
   font-size: 16px;
   line-height: 1.4;
   margin: 0;
