--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -25,7 +25,7 @@ html, body { background: white; }
 // ----------- IA WRITER FONTS ------------ //
 
 @font-face {
-  font-family: iA Writer Duospace;
+  font-family: iA_Writer_Duospace;
   font-weight: normal;
   font-style: normal;
   src: url(iAWriterDuospace-Regular.eot) format(embedded-opentype),
@@ -34,7 +34,7 @@ html, body { background: white; }
 }
 
 @font-face {
-  font-family: iA Writer Duospace;
+  font-family: iA_Writer_Duospace;
   font-weight: normal;
   font-style: italic;
   src: url(iAWriterDuospace-Italic.eot) format(embedded-opentype),
@@ -43,7 +43,7 @@ html, body { background: white; }
 }
 
 @font-face {
-  font-family: iA Writer Duospace;
+  font-family: iA_Writer_Duospace;
   font-weight: bold;
   font-style: normal;
   src: url(iAWriterDuospace-Bold.eot) format(embedded-opentype),
@@ -52,7 +52,7 @@ html, body { background: white; }
 }
 
 @font-face {
-  font-family: iA Writer Duospace;
+  font-family: iA_Writer_Duospace;
   font-weight: bold;
   font-style: italic;
   src: url(iAWriterDuospace-BoldItalic.eot) format(embedded-opentype),
@@ -67,7 +67,7 @@ html { height: 100%; }
 
 body {
   color: black;
-  font-family: 'iA Writer Duospace', monospace;
+  font-family: iA_Writer_Duospace, monospace;
   font-size: 16px;
   line-height: 1.4;
   margin: 0;
