--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -66,7 +66,7 @@ html { height: 100%; }
 
 body {
   color: black;
-  font-family: "iA_Writer_Duospace", monospace;
+  font-family: "iA Writer Duospace", monospace;
   font-size: 16px;
   line-height: 1.4;
   margin: 0;
